internal/cmd/egctl/testdata/translate/out/jwt-single-route-single-match-to-xds.route.yaml
xds:
  envoy-gateway-system/eg:
    '@type': type.googleapis.com/envoy.admin.v3.RoutesConfigDump
    dynamicRouteConfigs:
    - routeConfig:
        '@type': type.googleapis.com/envoy.config.route.v3.RouteConfiguration
        ignorePortInHostMatching: true
        name: envoy-gateway-system/eg/http
        virtualHosts:
        - domains:
          - www.example.com
          metadata:
            filterMetadata:
              envoy-gateway:
                resources:
                - kind: Gateway
                  name: eg
                  namespace: envoy-gateway-system
                  sectionName: http
          name: envoy-gateway-system/eg/http/www_example_com
          routes:
          - match:
              pathSeparatedPrefix: /foo
            metadata:
              filterMetadata:
                envoy-gateway:
                  resources:
                  - kind: HTTPRoute
                    name: backend
                    namespace: envoy-gateway-system
            name: httproute/envoy-gateway-system/backend/rule/0/match/0/www_example_com
            route:
              cluster: httproute/envoy-gateway-system/backend/rule/0
              upgradeConfigs:
              - upgradeType: websocket
            typedPerFilterConfig:
              envoy.filters.http.jwt_authn:
                '@type': type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.PerRouteConfig
                requirementName: example_610fd14578c340be
